[gd_scene load_steps=29 format=3 uid="uid://bp75xksj0l5to"]

[ext_resource type="Script" uid="uid://dsucwpdgcyu5l" path="res://scripts/player.gd" id="1_8afob"]
[ext_resource type="Material" uid="uid://b14jibrppbnpl" path="res://resources/shaders/vhs_shader.tres" id="2_75vfm"]
[ext_resource type="AudioStream" uid="uid://doyef42l717cp" path="res://assets/sounds/sound effects/Sand step 1.mp3" id="2_p47bc"]
[ext_resource type="Texture2D" uid="uid://nectcxwpo2ks" path="res://assets/misc/paper.jpg" id="3_0owmy"]
[ext_resource type="Script" uid="uid://ds07uk1kvljxa" path="res://scripts/message.gd" id="3_5gtgg"]
[ext_resource type="AudioStream" uid="uid://k4gfgkjcwrx7" path="res://assets/sounds/sound effects/Sand step 2.mp3" id="3_75vfm"]
[ext_resource type="Script" uid="uid://d2kmk7ioeo0tn" path="res://scripts/final_choice.gd" id="3_gx1jg"]
[ext_resource type="AudioStream" uid="uid://cqbmrffn8h7sj" path="res://assets/sounds/sound effects/Sand step 3.mp3" id="4_0owmy"]
[ext_resource type="FontFile" uid="uid://7oc3lr16ssuw" path="res://assets/misc/font-finalchoice.ttf" id="4_ugbui"]
[ext_resource type="PackedScene" uid="uid://cn7nxfy4yw4vt" path="res://assets/models/flashlight.glb" id="5_5gtgg"]
[ext_resource type="FontFile" uid="uid://b2rln1800pofq" path="res://assets/misc/font-handwriting.ttf" id="5_je7p5"]
[ext_resource type="AudioStream" uid="uid://d31ootg12xbd6" path="res://assets/sounds/sound effects/Sand step 4.mp3" id="5_qek5x"]
[ext_resource type="FontFile" uid="uid://cb50v5dlkie76" path="res://assets/misc/font-UI.ttf" id="6_fm80t"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_2vj2h"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_75vfm"]

[sub_resource type="GDScript" id="GDScript_75vfm"]
resource_name = "vhs_overlay"
script/source = "extends ColorRect

func _process(_delta: float) -> void:
	self.visible = GVar.vhs_overlay
"

[sub_resource type="GDScript" id="GDScript_gx1jg"]
resource_name = "Tutorial"
script/source = "extends Control

func _process(_delta: float) -> void:
	if GVar.messages_collected == 0:
		visible = true
	else:
		visible = false
"

[sub_resource type="GDScript" id="GDScript_ugbui"]
resource_name = "Tutorial2"
script/source = "extends Label

func _process(_delta: float) -> void:
	if GVar.messages_collected == 1:
		visible = true
	else:
		visible = false
"

[sub_resource type="GDScript" id="GDScript_5gtgg"]
resource_name = "MessagesCollected"
script/source = "extends Label

const OUT_OF: String = \"/7\"

func _process(_delta: float) -> void:
	text = str(GVar.messages_collected) + OUT_OF
"

[sub_resource type="Animation" id="Animation_0owmy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_75vfm"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.23333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_qek5x"]
resource_name = "fade_out"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_je7p5"]
resource_name = "white_out"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5gtgg"]
_data = {
&"RESET": SubResource("Animation_0owmy"),
&"fade_in": SubResource("Animation_75vfm"),
&"fade_out": SubResource("Animation_qek5x"),
&"white_out": SubResource("Animation_je7p5")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_gx1jg"]
radius = 8.0

[sub_resource type="Animation" id="Animation_h17s1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:mesh:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.6, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeshInstance3D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape3D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.0000001, 0)]
}

[sub_resource type="Animation" id="Animation_5gtgg"]
resource_name = "crouch"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:mesh:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.6, 0), Vector3(0, 0.8, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeshInstance3D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.6, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape3D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.0000001, 0), Vector3(0, 0.6, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_je7p5"]
_data = {
&"RESET": SubResource("Animation_h17s1"),
&"crouch": SubResource("Animation_5gtgg")
}

[node name="Player" type="CharacterBody3D" groups=["Player"]]
input_ray_pickable = false
script = ExtResource("1_8afob")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
cast_shadow = 0
mesh = SubResource("CapsuleMesh_2vj2h")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0000001, 0)
shape = SubResource("CapsuleShape3D_75vfm")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="CanvasLayer" type="CanvasLayer" parent="Head/Camera3D"]

[node name="VHSOverlay" type="ColorRect" parent="Head/Camera3D/CanvasLayer"]
material = ExtResource("2_75vfm")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = SubResource("GDScript_75vfm")

[node name="FinalChoice" type="Control" parent="Head/Camera3D/CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_gx1jg")

[node name="ButtonContainer" type="HBoxContainer" parent="Head/Camera3D/CanvasLayer/FinalChoice"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.0
offset_top = -20.5
offset_right = 118.0
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="TrueButton" type="Button" parent="Head/Camera3D/CanvasLayer/FinalChoice/ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_ugbui")
theme_override_font_sizes/font_size = 32
text = "Death?"

[node name="BadButton" type="Button" parent="Head/Camera3D/CanvasLayer/FinalChoice/ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_ugbui")
theme_override_font_sizes/font_size = 32
text = "Persist?"

[node name="Tutorial" type="Control" parent="Head/Camera3D/CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = SubResource("GDScript_gx1jg")

[node name="VBoxContainer" type="VBoxContainer" parent="Head/Camera3D/CanvasLayer/Tutorial"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="Head/Camera3D/CanvasLayer/Tutorial/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="Head/Camera3D/CanvasLayer/Tutorial/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 24
text = "E to interact with items"

[node name="Control" type="Control" parent="Head/Camera3D/CanvasLayer/Tutorial/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MessagePopUp" type="Control" parent="Head/Camera3D/CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_5gtgg")

[node name="MarginContainer" type="MarginContainer" parent="Head/Camera3D/CanvasLayer/MessagePopUp"]
custom_minimum_size = Vector2(300, 420)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Head/Camera3D/CanvasLayer/MessagePopUp/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_0owmy")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="Head/Camera3D/CanvasLayer/MessagePopUp/MarginContainer/TextureRect"]
custom_minimum_size = Vector2(280, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10

[node name="Message" type="Label" parent="Head/Camera3D/CanvasLayer/MessagePopUp/MarginContainer/TextureRect/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_je7p5")
autowrap_mode = 3

[node name="MarginContainer2" type="MarginContainer" parent="Head/Camera3D/CanvasLayer/MessagePopUp/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_right = -120

[node name="Tutorial" type="Label" parent="Head/Camera3D/CanvasLayer/MessagePopUp/MarginContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 18
text = "E to close
messages"
script = SubResource("GDScript_ugbui")

[node name="MessagesCollected" type="HBoxContainer" parent="Head/Camera3D/CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 45.0
grow_horizontal = 2
size_flags_horizontal = 3
alignment = 2

[node name="Label" type="Label" parent="Head/Camera3D/CanvasLayer/MessagesCollected"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_fm80t")
theme_override_font_sizes/font_size = 32
text = "X/8"
horizontal_alignment = 2
script = SubResource("GDScript_5gtgg")

[node name="Fade" type="ColorRect" parent="Head/Camera3D/CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Head/Camera3D/CanvasLayer/Fade"]
libraries = {
&"": SubResource("AnimationLibrary_5gtgg")
}

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.542002)
target_position = Vector3(0, 0, -4)
collision_mask = 2

[node name="Hand" type="Marker3D" parent="Head/Camera3D" groups=["ItemPickup"]]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.525, -0.25, -0.9)

[node name="flashlight" parent="Head/Camera3D" instance=ExtResource("5_5gtgg")]
transform = Transform3D(-0.9969228, 0, -0.07838959, 0, 1, 0, 0.07838959, 0, -0.9969228, 0.5073525, -1.3726375, -1.0705558)

[node name="Circle" parent="Head/Camera3D/flashlight" index="0"]
layers = 2
cast_shadow = 0

[node name="Flashlight" type="SpotLight3D" parent="Head/Camera3D/flashlight"]
transform = Transform3D(-0.999904, 0, -0.013857372, 0, 1, 0, 0.013857372, 0, -0.999904, 0.04281032, 1.1226375, -0.76956797)
light_energy = 2.0
light_indirect_energy = 0.0
light_specular = 1.0
light_bake_mode = 1
shadow_enabled = true
distance_fade_enabled = true
distance_fade_begin = 12.0
distance_fade_shadow = 20.0
distance_fade_length = 15.0
spot_range = 15.0
spot_angle = 30.0

[node name="WolfDetector" type="Area3D" parent="Head/Camera3D" groups=["Eyes"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/Camera3D/WolfDetector"]
transform = Transform3D(1, 0, 0, 0, -4.3711385e-08, -0.99999994, 0, 0.99999994, -4.3711385e-08, 0, 0, 0)
shape = SubResource("SphereShape3D_gx1jg")

[node name="Feet" type="Node3D" parent="."]

[node name="Footsteps1" type="AudioStreamPlayer3D" parent="Feet"]
stream = ExtResource("2_p47bc")
bus = &"Sound Effects"

[node name="Footsteps2" type="AudioStreamPlayer3D" parent="Feet"]
stream = ExtResource("3_75vfm")
bus = &"Sound Effects"

[node name="Footsteps3" type="AudioStreamPlayer3D" parent="Feet"]
stream = ExtResource("4_0owmy")
bus = &"Sound Effects"

[node name="Footsteps4" type="AudioStreamPlayer3D" parent="Feet"]
stream = ExtResource("5_qek5x")
bus = &"Sound Effects"

[node name="Timer" type="Timer" parent="Feet"]
process_callback = 0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_je7p5")
}

[connection signal="pressed" from="Head/Camera3D/CanvasLayer/FinalChoice/ButtonContainer/TrueButton" to="Head/Camera3D/CanvasLayer/FinalChoice" method="_on_true_button_pressed"]
[connection signal="pressed" from="Head/Camera3D/CanvasLayer/FinalChoice/ButtonContainer/BadButton" to="Head/Camera3D/CanvasLayer/FinalChoice" method="_on_bad_button_pressed"]
[connection signal="timeout" from="Feet/Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]

[editable path="Head/Camera3D/flashlight"]
